hashmap/tests/invalid/missing-arg/missing-arg.stderr
error: no rules expected the token `,`
 --> $DIR/missing-arg.rs:6:49
  |
6 |     let map: HashMap<_, _> = hashmap!{1 => 'a', , 2 => 'b'};
  |                                                 ^ no rules expected this token in macro call
